# vastai

./: .env.example  .gitignore  INSTANCE_MANAGEMENT.md  README.md  WORKFLOW_GUIDE.md  get_portal_urls.py  modified_workflow.json  pyproject.toml  vai  vastai-readme.md
.claude/: settings.local.json.backup.1761672630
.dildo-context7/: config.json
DOCS/: INSTANCE_MANAGEMENT.md  MULTI_INSTANCE_GUIDE.md  README.md  VAI_USAGE.md  vastai_flow.md
DOCS/implementation/: github-user-config.md
IMPORT/workflows/: 20250919_003851_26053267_wan2-2-I2V-FP8-Lightning-testexport.json  20250919_004750_26053267_wan2-2-I2V-FP8-Lightning-vertical.json  20251106_020142_27607817_test3-fixedv1.json  20251110_142802_27723347_fixed4.5.json
SCRIPTS/bash_scripts/: get_tunnel_urls.sh  setup_ssh_agent.sh  ssh_with_passphrase.sh
SCRIPTS/python_scripts/: README.md  __init__.py
TEMPLATES/1_workflows/: duckI2V.1.json  fixed4.json  mickI2V.1.json  wanTI2V.fixed5.final.json
TEMPLATES/2_provisioning_scripts/: MOTION_FORGE_Wan_2.2_14B_MoE_I2V_NOOB_FRIENDLY.sh  blank.sh  duckI2V.1.sh  fixed4.sh  mick.scene_builder.sh  mickI2V.1.sh  provisioning_template.sh  test2.sh  test3.sh  (+2 more)
bash_scripts/: setup_ssh_agent.sh  ssh_connect.sh
docs/: vastai_flow.md  vastai_gpu.md
provisioning_scripts/: provision_test_1.sh  provision_test_2.sh  provision_test_3.sh
python_scripts/: README.md  create_and_monitor.py  create_instance.py  debug_api.py  monitor_instance.py  quick_monitor.py  search_and_create.py  search_offers.py  search_offers_simple.py
template_workflows/: wan2-2-I2V-FP8-Lightning.json
(+93 files in other folders)
