[tool.poetry]
name = "vastai-tools"
version = "0.1.0"
description = "Tools for managing vast.ai GPU instances"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "python_scripts"}]

[tool.poetry.dependencies]
python = "^3.8.1"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
paramiko = ">=2.12,<4.0"
psutil = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
search-offers = "python_scripts.search_offers:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"